apps/argo-ingress/templates/argo-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: argocd-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: true
spec:
  tls:
    - hosts:
      - argo.dev.sec.shinra.com
      secretName: argocd-ingress-certificiate
  rules:
  - host: argo.dev.sec.shinra.com
    http:
      paths:
      - path: /
        backend:
          serviceName: argo-cd-argocd-server
          servicePort: 80
